--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/5f90e31930.js" crossorigin="anonymous"></script>
 </html>
